# iuppiter

./: .gitignore  Dockerfile  README.md  flows.py  hpfc.py  pyproject.toml  requirements.txt  schema.gql  spot_flow.py  spot_to_db.py  spotutc.csv  testmain.py  utils.py
.github/workflows/: build-docker-image.yml  build_docker_image.yml  docker-publish.yml  power_daily_future_flow.yml  power_daily_futures_flow.yml  power_daily_spot_flow.yml  power_end_customer_rates_flow.yml  power_hpfc_flow.yml  power_spot_flow.yml  power_spot_forecast_flow.yml  test.yml  vote.yml
data/: year_dayahead_2010.json  year_dayahead_2011.json  year_dayahead_2012.json  year_dayahead_2013.json  year_dayahead_2014.json  year_dayahead_2015.json  year_dayahead_2016.json  year_dayahead_2017.json  year_dayahead_2018.json  year_dayahead_2019.json  year_dayahead_2020.json
old/: README.md  index.js  pyproject.toml  requirements.txt  scrape.js  spot.csv  spotutc.csv  tests.py
old/generate_reports/: generate_reports.py
old/webscraper/: Generate_Reports.py  app.py  aws_password.txt  cities.json  cities_dev.json  helper_functions.py  main.py  scrape_websites.py  test.json  webscraper.py
src/: fetch_daily_power_spot.py  flows.py  hpfc.py  main.py  power_daily_future_flow.py  power_daily_futures_flow.py  power_daily_spot_flow.py  power_end_customer_rates_flow.py  power_spot_flow.py  power_spot_forecast_flow.py  register.py  spot_to_db.py  tasks.py  utils.py  vote.py
tmpiwm1myz3/: Dockerfile  spot-flow.flow
