[tool.poetry]
name = "iuppiter"
version = "0.1.0"
description = ""
authors = ["Ragnor Comerford <hello@ragnor.co>"]

[tool.poetry.dependencies]
python = "3.6.0"
boto3 = "^1.14.18"
numpy = "^1.19.0"
fbprophet = "^0.6"
cython = "^0.29.21"
pystan = "^2.19.1"
prefect = "0.12.2"
faunadb = "^2.12.0"
xmltodict = "^0.12.0"
PyGithub = "^1.51"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
