[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["Ragnor Comerford <hello@ragnor.co>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
sqlalchemy = "^1.3.18"
pandas = "^1.0.5"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
